zeit.content.article changes
============================

3.40.1 (unreleased)
-------------------

- FIX: Treat empty CPs set as IArticle.layout as existing, not as missing


3.40.0 (2018-11-02)
-------------------

- MAINT: Remove unneeded dependency on obsolete zeit.content.video.asset

- ZON-4933: Add feedback question to genre source


3.39.3 (2018-10-05)
-------------------

- ZON-3312: Remove deprecated fields from ICommonMetadata, asset badges,
  aggregate comments, lead teaser assets


3.39.2 (2018-09-25)
-------------------

- HOTFIX: Don't break in liveblog version comparison for new articles

- FIX: Current FF throws JS exception when replacing a DOM node with an empty string


3.39.1 (2018-09-25)
-------------------

- FIX: We should not have changed the meaning of "no version in XML" from 2 to 3
  in 3.38.5


3.39.0 (2018-09-21)
-------------------

- ZON-3482: Use xml config instead of article for breaking news banner


3.38.5 (2018-08-06)
-------------------

- ZON-4773: Change default Liveblog version to 3 


3.38.4 (2018-06-08)
-------------------

- SSL-160: Update test config for puzzleforms


3.38.3 (2018-05-31)
-------------------

- ZON-4720: Add checkbox to be able to show recent article comments first


3.38.2 (2018-05-29)
-------------------

- MAINT: Update to changed CP API


3.38.1 (2018-04-23)
-------------------

- ZON-4546: Add charlimit counter to division teaser

- ZON-4421: Put behind feature toggle `zeit.content.article.breakingnews-with-channel`


3.38.0 (2018-04-20)
-------------------

- ZON-4478: Add `findByline()` to genre source, adjusting the XML
  config format (remove display-frontend, change prose to byline)
  which is no problem as XSLT has been shutdown.


3.37.3 (2018-04-19)
-------------------

- ZON-4421: Add channels field to breaking news form


3.37.2 (2018-04-10)
-------------------

- BUG-837: Fix yet another browser edge case about whether the user