@@ -66,6 +66,10 @@ class Article(zeit.cms.content.metadata.CommonMetadata):
          'template', 'header_layout', 'is_instant_article', 'is_amp',
          'hide_ligatus_recommendations', 'recent_comments_first'))
 
+    has_audio = zeit.cms.content.dav.DAVProperty(
+        zeit.content.article.interfaces.IArticledio['has_audio'],
+        zeit.cms.interfaces.PRINT_SCHEMA_NS, 'has_audio', use_default=True)
+
     @property
     def body(self):
         return zeit.content.article.edit.interfaces.IEditableBody(self)
