@@ -4,6 +4,8 @@ zeit.content.article changes
 3.40.1 (unreleased)
 -------------------
 
+- ZON-4999: Add `has_audio` property
+
 - FIX: Treat empty CPs set as IArticle.layout as existing, not as missing
 
 
